Create second and third section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,37 @@
                 </div>
             </div>
         </div>
+
+        
+        <h2 class="info">Some random information</h2>
+
+        <div class="container-2">
+
+            <div class="image-set">
+                <div class="images"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="image-set">
+                <div class="images"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="image-set">
+                <div class="images"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="image-set">
+                <div class="images"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+
+        </div>
+
+        <div class="container-3">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="author">-Thor, god of thunder</p>
+        </div>
     </body>
 </html>
