Fix the Play Now link in the header not having </a>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="header">
                     <div class="header-logo">MIR4</div>                
                     <ul class="links">
-                        <li><a>Play Now</li>
+                        <li><a>Play Now</a></li>
                         <li><a>Chronicle</a></li>
                         <li><a>Overview</a></li>
                     </ul>
